--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
           <li class="config wz-dragger"></li>
           <li class="custom wz-dragger"></li>
           <li class="invite wz-dragger"></li>
-          <li class="backup wz-dragger"></li>
+          <!--<li class="backup wz-dragger"></li> -->
           <!--<li class="about wz-dragger"></li>-->
       </nav>
     </section>
@@ -1548,7 +1548,7 @@
             </article>
 
         </section>
-        -->
+
 
         <span class="preferences-bottom-title language"></span>
         <span class="preferences-bottom-description language"></span>
@@ -1580,6 +1580,144 @@
             </figure>
 
             <span></span>
+
+        </article>
+
+        -->
+
+        <article class="preferences-bottom-content-title">
+          <article class="title-icon">
+            <article class="title-icon-figure">
+            </article>
+          </article>
+          <article class="title">
+            <span></span>
+          </article>
+        </article>
+
+        <article class="preferences-bottom-content-body wz-scroll">
+
+            <article class="configuration-card long selectLanguage">
+
+              <article class="head">
+                <article class="title">
+                    <span></span>
+                </article>
+              </article>
+
+              <article class="content">
+
+                      <article class="flag en">
+
+                       <article class="tick">
+                         <i></i>
+                       </article>
+
+                       <article class="flag-image">
+                         <i></i>
+                       </article>
+
+                        <article class="flag-language">
+                          <span></span>
+                        </article>
+
+                      </article>
+                      <article class="flag es">
+
+                        <article class="tick">
+                          <i></i>
+                        </article>
+
+                        <article class="flag-image">
+                          <i></i>
+                        </article>
+
+                        <article class="flag-language">
+                           <span></span>
+                        </article>
+
+                      </article>
+              </article>
+
+            </article>
+
+
+            <article class="configuration-card normal selectExtensions">
+
+              <article class="head">
+                <article class="title">
+                    <span></span>
+                </article>
+                <label class="switch">
+                    <input type="checkbox">
+                    <div class="slider round"></div>
+                </label>
+              </article>
+
+              <article class="content">
+                <span class="extensionsDescription"></span>
+              </article>
+
+            </article>
+
+
+            <article class="configuration-card long backup">
+
+                <article class="head">
+                  <article class="title">
+                    <span></span>
+                  </article>
+                </article>
+
+                <article class="content-description">
+                  <span></span>
+                </article>
+
+                <article class="footer right">
+                  <article class="ui-btn download">
+                    <span></span>
+                  </article>
+                </article>
+
+            </article>
+
+            <article class="configuration-card long desktopApp">
+
+              <article class="head">
+                <article class="icon-title">
+                  <figure>
+                  </figure>
+                </article>
+                <article class="title">
+                  <span></span>
+                </article>
+              </article>
+
+              <article class="content-description">
+                <span></span>
+              </article>
+
+              <article class="footer right">
+                <article class="ui-btn download">
+                  <span></span>
+                </article>
+              </article>
+
+            </article>
+
+            <article class="configuration-card short deleteAccount">
+
+              <article class="head">
+                <article class="title">
+                  <span></span>
+                </article>
+                <article class="delete">
+                  <span></span>
+                </article>
+              </article>
+
+            </article>
+
 
         </article>
 
@@ -1640,25 +1778,49 @@
 
     <section class="preferences-bottom-content invite">
 
-      <section class="left-side">
-        <span class="title"></span>
-        <span class="subtitle"></span>
-      </section>
-      <section class="right-side">
-        <span class="emails"></span>
-        <section class="mail-list wz-scroll">
-          <input class="mail">
-          <input class="mail">
-          <input class="mail">
-          <input class="mail wz-prototype">
-        </section>
-        <section class="add-mail">
-          <span class="add-mail-text"></span>
-        </section>
-      </section>
-      <section class="share-button">
-        <span class="share-text"></span>
-      </section>
+      <article class="preferences-bottom-content-title">
+        <article class="title-icon">
+          <article class="title-icon-figure">
+          </article>
+        </article>
+        <article class="title">
+          <span></span>
+        </article>
+      </article>
+
+      <article class="preferences-bottom-content-body">
+
+        <article class="head">
+            <span class="alone"></span>
+            <span class="share"></span>
+        </article>
+
+        <article class="mail-container">
+
+          <article class="mail-title">
+            <span></span>
+          </article>
+
+          <article class="mail-list wz-scroll">
+            <input class="mail">
+            <input class="mail">
+            <input class="mail">
+            <input class="mail wz-prototype">
+          </article>
+
+          <article class="mail-footer add-mail">
+                <span></span>
+          </article>
+        </article>
+
+        <article class="footer">
+
+          <article class="ui-btn share-button">
+              <span class="share-text"></span>
+          </article>
+        </article>
+
+      </article>
 
     </section>
 
@@ -1666,6 +1828,7 @@
 
     <!-- BACKUP ZONE START -->
 
+  <!--
     <section class="preferences-bottom-content backup">
 
         <span class="preferences-bottom-title backup"></span>
@@ -1685,9 +1848,10 @@
             <span class="preferences-about-link legal"></span>
             <span class="preferences-about-link privacy"></span>
         </article>
-        -->
+
 
     </section>
+    -->
 
     <!-- BACKUP ZONE FINISH -->
 
