--- a/main.html
+++ b/main.html
@@ -1729,14 +1729,50 @@
 
     <section class="preferences-bottom-content custom">
 
-        <span class="preferences-bottom-title custom"></span>
-        <span class="preferences-bottom-description custom"></span>
+      <article class="preferences-bottom-content-title">
+        <article class="title-icon">
+          <article class="title-icon-figure">
+          </article>
+        </article>
+        <article class="title">
+          <span></span>
+        </article>
+      </article>
 
-          <section class="preferences-bottom-zone-scroll-container">
-            <section class="preferences-bottom-zone-customize wz-scroll">
+      <article class="preferences-bottom-content-body">
+        <article class="custom-content wz-scroll">
 
-                <!-- <span class="preferences-wallpaper-title"></span> -->
+          <article class="selectTheme">
+              <article class="theme-card light active">
+                <article class="title">
+                  <span></span>
+                </article>
+                <article class="view">
+                  <article class="view-img">
+                  </article>
+                </article>
+              </article>
 
+              <article class="theme-card dark">
+                <article class="title">
+                  <span></span>
+                </article>
+                <article class="view">
+                  <article class="view-img">
+                  </article>
+                </article>
+              </article>
+
+          </article>
+
+          <article class="selectWallpaper">
+            <article class="title">
+              <span></span>
+            </article>
+            <article class="selectWallpaper-containter">
+
+
+              <article class="selectWallpaper-content wz-scroll">
                 <article class="preferences-wallpaper-upload wz-wallpaper-uploader-start ui-btn">
 
                     <figure class="preferences-upload-background"></figure>
@@ -1766,9 +1802,14 @@
                 <figure class="preferences-wallpaper-image wallpaper-17" data-id="17"></figure>
                 <figure class="preferences-wallpaper-image wallpaper-18" data-id="18"></figure>
                 <figure class="preferences-wallpaper-image custom wz-prototype"></figure>
+              </article>
 
-            </section>
-          </section>
+            </article>
+
+          </article>
+
+        </article>
+      </article>
 
     </section>
 
@@ -1825,35 +1866,6 @@
     </section>
 
     <!-- INVITE ZONE FINISH -->
-
-    <!-- BACKUP ZONE START -->
-
-  <!--
-    <section class="preferences-bottom-content backup">
-
-        <span class="preferences-bottom-title backup"></span>
-        <span class="preferences-bottom-description backup"></span>
-        <span class="preferences-bottom-content-backup-img"></span>
-        <article>
-          <button class="ui-btn normal cancel">
-              <span class="preferences-bottom-backup-button ellipsis"></span>
-          </button>
-        </article>
-
-        <!--
-        <span class="preferences-about-version"></span>
-        <spanclass="preferences-about-text first wz-selectable">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non neque tincidunt, ullamcorper mi nec, eleifend ligula. Aliquam interdum augue mauris, viverra cursus dui imperdiet vitae. Fusce porttitor non libero ac tempor. In hac habitasse platea dictumst. Curabitur gravida feugiat adipiscing. Aliquam porta mi in mollis interdum. Curabitur eget fermentum mauris.</span>
-        <spanclass="preferences-about-text second wz-selectable">Cras et eros vitae diam sagittis consectetur in varius tellus. Nam sed lacinia justo. Mauris nunc quam, imperdiet pellentesque imperdiet at, vulputate nec felis. Ut cursus augue at dapibus pharetra. Fusce pretium porta lacus pellentesque scelerisque. Nulla aliquet nisl eget rutrum tincidunt. Cras lacinia rhoncus sapien, quis ultricies metus tristique quis. Nunc faucibus sit amet urna vel convallis. Proin eu ligula rhoncus, rhoncus mi sit amet, eleifend neque. Aenean a justo risus. Suspendisse ultrices sem mauris, sed interdum nibh tempor nec.</span>
-        <article class="preferences-about-footer">
-            <span class="preferences-about-link legal"></span>
-            <span class="preferences-about-link privacy"></span>
-        </article>
-
-
-    </section>
-    -->
-
-    <!-- BACKUP ZONE FINISH -->
 
     <!-- ABOUT ZONE START -->
   <!--
