--- a/main.html
+++ b/main.html
@@ -89,19 +89,17 @@
 
 
                   <article class="box-current-plan-top">
-                    <span></span>
+                    <span>P</span>
                   </article>
 
                   <article class="box-current-plan-middle">
 
                     <article class="premium-version">
+                      <article class="icon">
+                        <span>P</span>
+                      </article>
                       <article class="premium-info">
-                        <article class="left">
-                          <span></span>
-                        </article>
-                        <article class="right">
-                          <span></span>
-                        </article>
+                        <span></span>
                       </article>
                       <article class="premium-date">
                         <span></span>
@@ -752,13 +750,11 @@
                 <article class="box-current-plan-middle">
 
                   <article class="premium-version">
+                    <article class="icon">
+                      <span>P</span>
+                    </article>
                     <article class="premium-info">
-                      <article class="left">
-                        <span></span>
-                      </article>
-                      <article class="right">
-                        <span></span>
-                      </article>
+                      <span></span>
                     </article>
                     <article class="premium-date">
                       <span></span>
@@ -824,7 +820,7 @@
 
                     <article class="info-current-card">
 
-                      <<article class="info-current-card-left">
+                      <article class="info-current-card-left">
                         <article class="info-current-quantity">
 
                           <article class="quantity no-free hidden">
@@ -1452,7 +1448,7 @@
             </article>
 
 
-            <article class="configuration-card normal selectExtensions">
+            <article class="configuration-card selectExtensions">
 
               <article class="head">
                 <article class="title">
@@ -1471,7 +1467,7 @@
             </article>
 
 
-            <article class="configuration-card long backup">
+            <article class="configuration-card backup">
 
                 <article class="head">
                   <article class="title">
@@ -1515,7 +1511,7 @@
 
             </article>
 
-            <article class="configuration-card short deleteAccount">
+            <article class="configuration-card deleteAccount">
 
               <article class="head">
                 <article class="title">
@@ -1524,6 +1520,9 @@
                 <article class="delete">
                   <span></span>
                 </article>
+              </article>
+              <article class="body">
+                <span></span>
               </article>
 
             </article>
@@ -1537,7 +1536,7 @@
 
     <!-- CUSTOMIZE ZONE START -->
 
-    <section class="preferences-bottom-content custom">
+    <section class="preferences-bottom-content custom wz-scroll">
 
       <article class="preferences-bottom-content-title">
         <article class="title-icon">
@@ -1550,7 +1549,7 @@
       </article>
 
       <article class="preferences-bottom-content-body">
-        <article class="custom-content wz-scroll">
+        <article class="custom-content">
 
           <article class="selectTheme">
               <article class="theme-card light active">
