--- a/main.html
+++ b/main.html
@@ -166,10 +166,12 @@
 
                     <article class="options-bottom">
                       <article class="top">
-                        <span class="summary-subtitle"></span>
+                        <span class="summary-subtitle  subtitle-space"></span>
+                        <span class="summary-subtitle subtitle-price"></span>
                       </article>
                       <article class="bottom">
-                        <span></span>
+                        <span class="summary-subtitle-space"></span>
+                        <span class="summary-subtitle-amount"></span>
                       </article>
 
                     </article>
