--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     <section class="preferences-top-nav">
       <nav class="wz-dragger pointer">
           <li class="account wz-dragger"></li>
-          <li class="hdd active wz-dragger"></li>
+          <li class="hdd wz-dragger"></li>
           <!--<li class="social wz-dragger"></li>-->
           <li class="config wz-dragger"></li>
           <li class="custom wz-dragger"></li>
