Added social networks

--- a/main.html
+++ b/main.html
@@ -1654,20 +1654,24 @@
           <article class="mail-list wz-scroll">
             <input class="mail">
             <input class="mail">
-            <input class="mail">
             <input class="mail wz-prototype">
           </article>
 
           <article class="mail-footer add-mail">
                 <span></span>
           </article>
+
         </article>
 
-        <article class="footer">
+        <article class="social-networks">
 
-          <article class="ui-btn share-button">
-              <span class="share-text"></span>
-          </article>
+          <button class="fb-button"><figure></figure><span></span></button>
+          <button class="google-button"><figure></figure><span></span></button>
+          
+        </article>
+
+        <article class="ui-btn share-button">
+            <span class="share-text"></span>
         </article>
 
       </article>
