Added delete account

--- a/main.html
+++ b/main.html
@@ -1618,8 +1618,14 @@
         <span class="preferences-bottom-description backup"></span>
         <span class="preferences-bottom-content-backup-img"></span>
         <article>
-          <button class="ui-btn normal cancel">
+          <button class="ui-btn normal cancel download-backup">
               <span class="preferences-bottom-backup-button ellipsis"></span>
+          </button>
+        </article>
+
+        <article>
+          <button class="ui-btn normal cancel delete-account">
+              <span class="preferences-bottom-delete-account-button ellipsis"></span>
           </button>
         </article>
 
@@ -1655,4 +1661,29 @@
 -->
     <!-- ABOUT ZONE FINISH -->
 
+</section>
+
+<section class="delete-account-popup">
+  <figure class="close-button"><i></i></figure>
+  <div class="popup-title"></div>
+  <section class="options-list">
+
+    <section class="files option">
+      <figure class="ui-checkbox red"><i></i></figure>
+      <div class="option-text"></div>
+    </section>        
+    <section class="worlds option">
+      <figure class="ui-checkbox red"><i></i></figure>
+      <div class="option-text"></div>
+    </section>
+    <section class="chats option">
+      <figure class="ui-checkbox red"><i></i></figure>
+      <div class="option-text"></div>
+    </section>
+
+  </section>
+
+  <button class="delete-button disabled">
+    <span class="button-text"></span>
+  </button>
 </section>
