Update to new Workspace model
- Hide extensions option in preferences

--- a/main.html
+++ b/main.html
@@ -1517,7 +1517,8 @@
 
         </section>
 
-        <span class="preferences-bottom-title extensions"></span>
+        <!-- WARNING: FILE EXTENSIONS DOES NOT WORK -->
+        <!-- <span class="preferences-bottom-title extensions"></span>
 
         <article class="preferences-bottom-checkbox preferences-extensions-display dark">
 
@@ -1527,7 +1528,7 @@
 
             <span></span>
 
-        </article>
+        </article> -->
 
     </section>
 
@@ -1671,7 +1672,7 @@
     <section class="files option">
       <figure class="ui-checkbox red"><i></i></figure>
       <div class="option-text"></div>
-    </section>        
+    </section>
     <section class="worlds option">
       <figure class="ui-checkbox red"><i></i></figure>
       <div class="option-text"></div>
